--- a/assests/script.css
+++ b/assests/script.css
@@ -1,14 +1,15 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 body {
     color: #171a20;
     font-family: 'M PLUS 1', sans-serif;
 }
 
-.desktop{
+.desktop {
     display: none;
 }
 
@@ -26,6 +27,9 @@ header {
     top: 0;
     z-index: 2;
     width: 100%;
+}
+header nav.right {
+    text-align: right;
 }
 
 a.logo {
@@ -47,6 +51,24 @@ header nav.center {
     text-align: center;
 }
 
-header nav.right{
-text-align: right;
+section {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+}
+
+section .content {
+    width: 100%;
+    height: 100vh;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+    text-align: center;
+}
+
+section h1{
+    font-size: 3rem;
+}
+
+section a {
+    color: inherit;
 }
