--- a/assests/script.css
+++ b/assests/script.css
@@ -13,7 +13,7 @@ body {
     display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
     .desktop {
         display: initial;
     }
@@ -28,6 +28,7 @@ header {
     z-index: 2;
     width: 100%;
 }
+
 header nav.right {
     text-align: right;
 }
@@ -63,12 +64,77 @@ section .content {
     padding-top: 15vh;
     padding-bottom: 15vh;
     text-align: center;
+    display: grid;
+    grid-template-rows: min-content auto max-content;
 }
 
-section h1{
+section h1 {
     font-size: 3rem;
 }
 
 section a {
     color: inherit;
+}
+
+section .buttons a {
+    display: block;
+    background-color: #eee;
+    color: inherit;
+    padding: 12px 50px;
+    border-radius: 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+section .buttons a:first-child {
+    background-color: #444;
+    color: white;
+}
+
+section .buttons {
+    display: grid;
+    row-gap: 20px;
+    margin: 0 40px;
+}
+
+@media (min-width: 768px) {
+    section .buttons {
+        max-width: 640px;
+        margin: 0 auto;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+    }
+}
+
+aside {
+    position: fixed;
+    right: 0;
+    width: 320px;
+    background-color: #fff;
+    padding: 80px 40px;
+    z-index: 4;
+    height: 100vh;
+}
+
+aside a {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    padding: 12px 0px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+aside button.close {
+    font-size: 24px;
+    border: 0;
+    background-color: transparent;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    font-family: sans-serif;
+    font-weight: 100;
 }
