--- a/assests/script.css
+++ b/assests/script.css
@@ -110,12 +110,16 @@ section .buttons {
 
 aside {
     position: fixed;
-    right: 0;
+    right: -320px;
     width: 320px;
     background-color: #fff;
     padding: 80px 40px;
     z-index: 4;
     height: 100vh;
+}
+
+aside.active {
+    right: 0;
 }
 
 aside a {
@@ -137,4 +141,12 @@ aside button.close {
     padding: 10px;
     font-family: sans-serif;
     font-weight: 100;
+}
+
+.backdrop {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, .35);
+    backdrop-filter: blur(5px);
 }
